[package]
name = "rebind"
version = "0.1.0"
edition = "2021"
description = "A DNS rebinding toolkit: a subdomain-encoded DNS nameserver plus paired web servers for authorized security testing"

[[bin]]
name = "rebind"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hickory-server = "0.24"
hickory-proto = "0.24"
async-trait = "0.1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

[profile.release]
opt-level = 3
